# speech-synthesis

./: Cargo.toml  README.md
src/: audio.rs  event.rs  lib.rs
