[package]
name = "speech-synthesis"
version = "0.2.0"
edition = "2021"
rust-version = "1.75"
authors = ["pyke.io <contact@pyke.io>"]
description = "Common traits for speech synthesis"
license = "Apache-2.0"
repository = "https://github.com/pykeio/speech-synthesis"

[dependencies]
futures-core = { version = "0.3", default-features = false }
ssml = { version = "0.1", default-features = false }
